src/sass/state/_mediaqueries.scss
///////////////////////
//// Media Queries ////
///////////////////////

// Tablet Queries
@media screen and (min-width: 700px) {
    .aozora-bostock-logos{
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: row;
        
         .bostock-logo-wrapper{
            border-bottom: none;
            border-right: solid 1px $primaryDarkColor;

            .bostock-logo {
                max-width: 60%;
            }
        }
    }

    .our-products{
        .inner{
            .mobile-product{
                display: none;
            }

            .desktop-product{
                display: block;

                fieldset{
                    margin: 20px;

                    legend{
                        text-align: center;
                        .product-title{
                            border-radius: $borderRadius;
                            text-align: center;
                            color: $lightTextColor;

                            .blurb {
                                margin: 0;
                                padding: 16px;
                            }
                        }
                    }
                }
            }
        }
    }

    .contact{
        .inner{
            display: flex;
            justify-content: space-around;
            
            .contact-seperator{
                align-self: center;
                display: block;
                background-color: $silverColor;
                width: 2px;
                height: 150px;
            }

        }
    }
}

// Desktop Queries
@media screen and (min-width: 1000px) {
    .header {
        height: 100px;
        transition: $transitionSpeed;

        .logo {
            height: 100%;
            margin: 0;
            display: inline-block;
        }

        .mobile-header {
            display: none;
        }

        .desktop-nav {
            display: block;
            float: right;

            .nav-ul {
                line-height: 100px;
                transition: $transitionSpeed;

                li {
                    display: inline-block;
                    border-bottom: 2px solid rgba(0, 0, 0, 0.0);
                    transition: $transitionSpeed;

                    &:hover {
                        border-bottom: 2px solid $goldColor;

                        a {
                            color: $goldColor;
                        }
                    }

                    a {
                        text-align: center;
                        color: $silverColor;
                        padding: 0 10px;
                        font-weight: $paragraphFontWeight;
                        display: block;
                        line-height: 30px;
                        transition: $transitionSpeed;
                    }
                }
            }
        }
    }

    .main {
        padding-top: 100px;

        .slideshow-section-wrapper {
            height: calc(100vh - 100px);
            position: relative;

            .slideshow-section {
                width: 100vw;
                height: calc(100% - 135.47px);

                .mobile-slideshow {
                    display: none;
                }

                .desktop-slideshow {
                    height: 100%;
                    width: 100%;
                    margin-bottom: 0px;

                    .slick-list, .slick-track {
                        height: 100%;
                    }

                    .slide {
                        background-size: cover;
                        background-repeat: no-repeat;
                        background-position: 50% 50%;
                        height: 100%;
                        padding: 0 85px; // Prevents any images from hiding behind the slideshow toggles

                        &:nth-child(1) {
                            background-image: url("../img/slideshow/slideshow-bg-1.png");
                        }

                        &:nth-child(2) {
                            background-image: url("../img/slideshow/slideshow-bg-2.png");
                        }

                        &:nth-child(3) {
                            background-image: url("../img/slideshow/slideshow-bg-3.png");
                        }

                        .inner {
                            height: 100%;
                            max-width: 1500px;
                            margin: 0 auto;
                            position: relative;
                            padding: 0;

                            .blurb {
                                font-size: $slideshowFontSize;
                                text-align: center;
                                color: $lightTextColor;
                                max-width: 1200px;
                                margin: 60px auto;
                            }
                        }
                    }

                    .slide-one {
                        .inner {
                            img {
                                width: calc(100% - 170px);
                                padding: 100px 0;
                                margin: 0 auto;
                                display: block;
                            }
                        }
                    }

                    .slide-two {
                        .inner {
                            img {
                                height: 100%;
                                padding: 100px 0;
                            }
                        }
                    }

                    .slide-three {
                        .inner {
                            img {
                                height: 100%;
                                padding: 100px 0;
                                margin: 0 auto;
                                display: block;
                            }
                        }
                    }

                    // Slick defaults configuration
                    .slick-prev, .slick-next {
                        z-index: 500;
                        width: auto;
                        height: auto;

                        &::before {
                            font-size: 100px;
                            font-family: 'FontAwesome';
                            display: block;
                        }
                    }

                    .slick-prev {
                        left: 20px;
                    }

                    .slick-next {
                        right: 20px;
                    }

                    .slick-dots {
                        width: 100%;
                        position: absolute;
                        bottom: 0px;
                        left: 0;
                        z-index: 500;
                        text-align: center;
                        line-height: 100px;
                        background: linear-gradient(rgba(22, 22, 22, 0), rgba(22, 22, 22, 0.8));

                        li button::before {
                            color: $lightTextColor;
                            font-size: 15px;
                        }
                    }
                }
            }

            .oil-brand-links {
                position: absolute;
                bottom: 0;
                left: 0;
                right: 0;
            }
        }
    }

    .mobile-nav, .nav-overlay {
        display: none;
    }
}

// Product height automation. May need to be deleted
@media screen and (min-height: 800px) {
    .product-info {
        .inner {
            height: auto;
        }
    }
}

